  slash to denote directory placeholder objects in S3 instead of
  the custom "application/x-directory" content-type. This should
  improve compatibility with other storage management tools, especially
  Amazon's AWS Console.

  * GoogleStorageService

- Google Storage (GS) service class added to provide specific support
  for Google's storage provider.

  * S3Service

- Methods for setting and using AWS DevPay credentials moved from
  S3Service to RestS3Service.

  * CloudFront Service

- Added support for setting Default Root Object for CloudFront distributions.
- Added support for API version 2010-08-01 and invalidation of objects.
- Modified CloudFrontService#signUrl and #signUrlCanned to accept raw resource
  URL or path strings, instead of expressing all resources as HTTP URLs. This
  allows for URL signing of HTTPS and RTMP streaming resources.  

  * SOAP implementation

- REMOVED from project.

COCKPIT

- Added explicit support for logging in to either the Google Storage or
  Amazon S3 service in the startup/login dialog.
- A CloudFront distribution's Default Root Object setting can be configured
  in the "CloudFront Distributions" dialog.

KUDOS TO:

- Claudio Cherubino of Google Inc., for significant refactoring work
  and the addition of full support for the Google Storage service.
- David Kocher for a patch to implement Default Root Object support
  in the CloundFrontService, and for providing testing and feedback. 


-------------
Version 0.7.4
-------------

TOOLKIT

  * General

- Added support for the new Reduced Redundancy Storage (RRS) class
  for objects. This discounted storage class can be applied when an
  object is created, overwritten or copied. The storage class can be
  set per-object, or a default value can be set with the property
  's3service.defaultStorageClass'. Storage classes can be disabled
  altogether for services that don't support them using the
  's3service.enable-storage-classes' property.